--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,7 @@ section {
 }
 
 /* ============================================
-|   |   |   |  Vartical Heading  
+|   |   |   |  Vartical / Horizontal Heading  
 =============================================== */
 
 .vartical-heading h5 {
@@ -226,6 +226,28 @@ section {
     font-weight: 100;
     line-height: 45px;
 }
+
+.horizontal-heading {
+    margin-bottom: 80px;
+
+}
+
+.horizontal-heading h5 {
+    font-size: 16px;
+    color: #f4c613;
+    text-transform: uppercase;
+    display: inline-block;
+    margin-bottom: 10px;
+   
+}
+
+.horizontal-heading h2 {
+    font-size: 42px;
+    font-weight: 100;
+    line-height: 45px;
+    margin:0 ;
+}
+
 
 /* ============================================
 |   |   |   |   about 01      
@@ -486,4 +508,50 @@ ul.social-list li:nth-child(3) a:hover {
     color: #f4c613;
     font-family: "Raleway", sans-serif;
     margin-top: 8px;
+}
+
+
+/* ============================================
+|   |   |   |        Services 01
+=============================================== */
+
+#services-01 img {
+    margin: 60px 0;
+}
+
+.service {
+    margin: 35px 0;
+}
+
+.service .icon {
+    font-size: 42px;
+    margin: 0;
+    -webkit-transition: all 400ms linear;
+    transition: all 400ms linear;
+}
+
+.service:hover .icon {
+    color: #f4c613;
+    -webkit-transform: translateX(-20px);
+    transform: translateX(-20px);
+}
+
+.service h5 {
+    font-size: 12px;
+    text-transform: uppercase;
+    color: #f4c613;
+    margin: 0 0 6px 0;
+}
+
+.service:hover h5 {
+    color: #212226;
+}
+
+.service h4 {
+    font-size: 24px;
+    margin: 0 0 8px 0;
+}
+
+.service p {
+    line-height: normal;
 }
