--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
 html,
 body {
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -161,6 +162,7 @@ section {
 .btn-home {
     color: #ffffff;
     border: 1px solid #ffffff;
+    
 }
 
 .btn-home:hover,
