--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,6 @@ section {
 #home {
     background: none;
     height: 100%;
-
 }
 
 #home-bg-video {
@@ -161,8 +160,7 @@ section {
 
 .btn-home {
     color: #ffffff;
-    border: 1px solid #ffffff;
-    
+    border: 1px solid #ffffff;  
 }
 
 .btn-home:hover,
@@ -221,10 +219,10 @@ section {
 }
 
 /* ============================================
-|   |   |   |  Vartical / Horizontal Heading  
+|   |   |   |  Vertical / Horizontal Heading  
 =============================================== */
 
-.vartical-heading h5 {
+.vertical-heading h5 {
     color: #f4c613;
     font-size: 14px;
     font-weight: 500;
@@ -237,7 +235,7 @@ section {
     left: -53px;
 }
 
-.vartical-heading h2 {
+.vertical-heading h2 {
     margin: 0 0 0 35px;
     font-size: 42px;
     font-weight: 100;
@@ -351,7 +349,7 @@ section {
 |   |   |   |        Team
 =============================================== */
 
-#team-left .vartical-heading {
+#team-left .vertical-heading {
     min-height: 160px;
 }
 
