--- a/css/style.css
+++ b/css/style.css
@@ -638,3 +638,15 @@ ul.social-list li:nth-child(3) a:hover {
     margin-bottom: 30;
 
 }
+
+/* ============================================
+|   |     Portfolio
+=============================================== */
+
+#portfolio .vertical-heading {
+    margin-bottom: 50px;
+}
+
+.row.no-gutters [class*=col-] {
+    padding: 0;
+}
