added working section,its css, isotope jquery plugin

--- a/css/style.css
+++ b/css/style.css
@@ -650,3 +650,33 @@ ul.social-list li:nth-child(3) a:hover {
 .row.no-gutters [class*=col-] {
     padding: 0;
 }
+
+/* Filter Buttons  CSS */
+
+#isotope-filters {
+    margin-bottom: 10px;
+    padding: 20px 25px 20px 0;
+}
+
+#isotope-filters button {
+    font-family: "Raleway",sans-serif;
+    font-size: 12px;
+    font-weight: 700;
+    background: transparent;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    padding-right: 30px;
+}
+
+#isotope-filters button span {
+    display: block;
+    padding: 5px;
+    -webkit-transition: border-color .4s ease-in-out;
+    transition: border-color .4s ease-in-out;
+}
+
+#isotope-filters button.active span{
+    color: #f4c613;
+    border-bottom: 3px solid #f4c613; 
+}
+
