Done Pricing Section

--- a/css/style.css
+++ b/css/style.css
@@ -186,6 +186,21 @@ section {
 
 }
 
+.btn-white {
+    color: #212226;
+    border: 1px solid #ffffff;
+    background-color: #ffffff;
+
+}
+
+.btn-white:hover,
+.btn-white:focus {
+    color: #ffffff;
+    background-color: #212226;
+    border: 1px solid #212226;
+
+}
+
 /* ============================================
 |   |   |   |   Arrow Buttons   
 =============================================== */
@@ -833,4 +848,127 @@ ul.social-list li:nth-child(3) a:hover {
 
 .author .author-name-des p {
     margin: 0;
+}
+
+/* ============================================
+|   |     Pricing
+=============================================== */
+.pricing-table {
+    -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+    border-radius: 6px;
+    padding: 32px 21px;
+    -webkit-transition: all 400ms linear;
+    transition: all 400ms linear;
+}
+
+.pricing-table:hover {
+    background: #f4c613;
+}
+
+.pricing-table .type h4 {
+    color: #f4c613;
+    font-size: 24px;
+    margin-bottom: 25px;
+}
+
+.pricing-table .price {
+    border-top: 1px solid #e0e0e0;
+    border-bottom: 1px solid #e0e0e0;
+    padding: 24px 0;
+}
+
+.pricing-table .price h2 {
+    font-family: "Open Sans", sans-serif;
+    font-size: 42px;
+    font-weight: 100;
+    margin: 0 0 0 24px;
+    position: relative;
+}
+
+.pricing-table .price h2 span {
+    font-family: "Raleway", sans-serif;
+}
+
+.pricing-table .price h2 span.dollar {
+    font-size: 18px;
+    font-weight: 300;
+    position: absolute;
+    left: -20px;
+    top: 5px;
+}
+
+.pricing-table .price h2 span.month {
+    font-size: 11px;
+    font-weight: 400;
+    position: absolute;
+    left: 5px;
+    bottom: -12px;
+}
+
+.pricing-table .price p {
+    line-height: normal;
+    font-weight: 800;
+    margin: 0;
+    padding: 0;
+}
+
+.pricing-table ul.package {
+    list-style: none;
+    padding: 20px 0;
+}
+
+.pricing-table ul.package li {
+    font-family: "Open Sans", sans-serif;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 40px;
+}
+
+.pricing-table ul.package li i {
+    widows: 24px;
+    ;
+}
+
+.pricing-table .btn-yellow {
+    width: 96%;
+}
+
+.pricing-table:hover h4,
+.pricing-table:hover h2,
+.pricing-table:hover p,
+.pricing-table:hover ul.package {
+    color: #ffffff;
+}
+
+
+.pricing-table:hover .btn-yellow {
+    background: #ffffff;
+    color: #212226;
+    border: 1px solid #ffffff;
+}
+
+.pricing-table .btn-yellow:hover,
+.pricing-table .btn-yellow:hover {
+    background: #212226;
+    color: #ffffff;
+    border: 1px solid #212226;
+}
+
+/* Black Pricing Table */
+.pricing-table.black {
+    background: #212226;
+    color: #ffffff;
+}
+
+.pricing-table.black .type h4 {
+    color: #ffffff;
+}
+
+.pricing-table.black:hover {
+    background: #f4c613;
+}
+
+.pricing-table.black .btn-white {
+    width: 96%;
 }
