done Stats Section & add counter effect

--- a/css/style.css
+++ b/css/style.css
@@ -972,3 +972,61 @@ ul.social-list li:nth-child(3) a:hover {
 .pricing-table.black .btn-white {
     width: 96%;
 }
+
+/* ============================================
+|   |     |     Stats
+=============================================== */
+
+#stats {
+    background: url("../img/stats/stats-bg.jpg") no-repeat center fixed;
+    /* background-repeat: no-repeat;
+     background-position: center;
+    background-attachment: fixed; */
+    background-size: cover;
+}
+
+#stats .content-box-md {
+    background: rgba(0, 0, 0, .3);
+}
+
+#stats .vertical-heading h2 {
+    color: #ffffff;
+}
+
+.stats-item {
+    background: rgba(61, 68, 68, 0.6);
+    border-radius: 4px;
+    min-height: 170px;
+    padding: 25px 50px;
+    -webkit-transition: all 400ms linear;
+    transition: all 400ms linear;
+}
+
+.stats-item i {
+    font-size: 42px;
+    color: #f4c613;
+    margin: 0 0 6px;
+    -webkit-transition: all 400ms linear;
+    transition: all 400ms linear;
+}
+
+.stats-item h3 {
+    font-size: 32px;
+    color: #ffffff;
+    margin: 5px 0 5px 0;
+}
+
+.stats-item p {
+    color: #ffffff;
+    margin: 0;
+}
+
+.stats-item:hover {
+    background: #f4c613;   
+}
+
+.stats-item:hover i {
+    color: #212226;
+    -webkit-transform: translateY(-20px);
+    transform: translateY(-20px);
+}
