--- a/css/style.css
+++ b/css/style.css
@@ -1183,3 +1183,10 @@ ul.office-details li i {
     min-height: 164px;
 
 }
+
+/* ============================================
+|   |     |      |    Google Map
+=============================================== */
+#map {
+    height: 600px;
+}
