--- a/css/style.css
+++ b/css/style.css
@@ -1190,3 +1190,20 @@ ul.office-details li i {
 #map {
     height: 600px;
 }
+
+/* ============================================
+|   |     |      |   Footer
+=============================================== */
+footer {
+    background: #212226;
+    padding: 30px;
+}
+
+footer p {
+    color: #ffffff;
+    line-height: 20px;
+}
+
+footer p span {
+    color: #f4c613;
+}
