--- a/css/responsive.css
+++ b/css/responsive.css
@@ -38,6 +38,7 @@
 
 /* Small Devices */
 @media(min-width: 768px) and (max-width: 991px) {
+
     /* Navigation */
     .site-nav-wrapper {
         padding: 0;
@@ -47,15 +48,19 @@
     #home-heading h1 {
         font-size: 41px;
     }
+
     #home-text p {
         font-size: 13px;
     }
+
     /* Generic */
     .btn-general {
         padding: 8px 35px 8px 35px;
+        tab-size: 10px;
     }
-     /* Generic */
-     .vertical-heading h2 {
+
+    /* Generic */
+    .vertical-heading h2 {
         font-size: 29px;
     }
 
@@ -70,6 +75,7 @@
         text-align: center;
         margin-bottom: 10px;
     }
+
     .r-tabs-accordion-title a {
         font-family: "Railway", sans-serif;
         font-size: 13px;
@@ -107,9 +113,10 @@
     }
 
     /* Contact */
-    ul.office-details li{
+    ul.office-details li {
         margin-right: 15px;
     }
+
     ul.office-details li i {
         width: 25px;
     }
@@ -118,4 +125,191 @@
 
 
 /* extra Small Devices */
-@media (max-width: 767px) {}
+@media (max-width: 767px) {
+
+    /* Home */
+    #home-heading h1 {
+        font-size: 22px;
+    }
+
+    #home-text p {
+        font-size: 13px;
+        line-height: 8px;
+        margin: 8px 2px 30px 2px;
+    }
+
+    /* Generic */
+    .btn-general {
+        padding: 8px 25px 6px 25px;
+        font-size: 10px;
+    }
+
+    /* about 01 */
+    /* large content box */
+    .content-box-lg {
+        padding: 90px 0;
+    }
+
+    /* Generic */
+    .vertical-heading {
+        text-align: center;
+    }
+
+    .vertical-heading h5 {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+        display: block;
+        position: static;
+        margin-bottom: 15px;
+    }
+
+    .vertical-heading h2 {
+        font-size: 29px;
+        line-height: normal;
+        margin: 0;
+    }
+
+    #about-left {
+        margin-bottom: 50px;
+    }
+
+    #about-right {
+        text-align: center;
+    }
+
+    /* about 02 */
+    /* Medium content box */
+    .content-box-md {
+        padding: 80px 0;
+    }
+
+    .about-item {
+        padding: 55px 30px;
+        margin-bottom: 35px;
+    }
+
+    .about-item i {
+        font-size: 30px;
+    }
+
+    .about-item h3 {
+        font-size: 18px;
+    }
+
+    /* team */
+
+    #team-left .vertical-heading {
+        min-height: 130px;
+    }
+
+    .skill h4 {
+        size: 14px;
+        line-height: 35px;
+    }
+
+    /* Tech Statement */
+    #tech-statement h3 {
+        font-size: 20px;
+        line-height: 30px;
+    }
+
+    /* Services 01 */
+
+    /* Horizontal Heading */
+    .horizontal-heading {
+        margin-bottom: 40px;   
+    }
+    .horizontal-heading  h2 {
+        font-size: 30px;
+    }
+
+    #services-01 img {
+        margin: 35px 0;
+    }
+
+    .service,.service .icon {
+        text-align: center;
+    }
+    .service h4 {
+        font-size: 18px;
+    }
+
+    /* Services 02 */
+    .r-tabs-accordion-title {
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    .r-tabs-accordion-title a {
+        font-family: "Railway", sans-serif;
+        font-size: 13px;
+        color: #212226;
+        text-transform: uppercase;
+        font-weight: 400;
+        padding: 0;
+        text-decoration: none;
+    }
+
+    /* Tab active state */
+    .r-tabs-accordion-title.r-tabs-state-active a {
+        color: #f4c613;
+        font-weight: 700;
+        border-bottom: 3px solid #f4c613;
+        padding-bottom: 5px;
+        -webkit-transition: border-color 300ms linear;
+        transition: border-color 300ms linear;
+    }
+
+    #services-tabs .tab-bg {
+        text-align: center;
+        padding: 40px 30px;
+    }
+
+    #services-tabs h2 {
+        font-size: 40px;
+    }
+    #services-tabs h3 {
+        font-size: 28px;
+    }
+
+    /* Portfolio */
+    #portfolio {
+        padding-bottom: 0;
+    }
+
+    #isotope-filters button {
+        padding: 15px;
+    }
+
+     /* Testimonial */
+     #testimonials {
+         padding-top: 45px;
+     }
+     #testimonial-slider {
+        top: 0;
+    }
+
+    #testimonials .vertical-heading {
+        padding: 0;
+    }
+
+    .testimonial .row {
+        margin: 0;
+    }
+
+    .testimonial h3 {
+        font-size: 20px;
+    }
+
+    .testimonial .stars {
+        font-size: 16px;
+    }
+
+    .author img {
+        width: 80px !important; 
+    }
+
+
+
+
+}
