--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,8 @@ section {
     width: auto;
     height: auto;
     z-index: -1;
-    background-image: url(../video/solo.jpg) no-repeat;
+    background-image: url("../video/solo.jpg");
+    background-repeat: no-repeat;
     background-size: cover;
 }
 
@@ -374,6 +375,11 @@ section {
     transition: all 400ms ease-in-out;
 }
 
+.about-item h3,
+.about-item p  {
+    -webkit-transition: all 400ms linear;
+    transition: all 400ms linear;
+}
 
 /* ============================================
 |   |   |   |        Team
@@ -397,14 +403,14 @@ section {
     height: 100%;
     overflow: hidden;
     opacity: 0;
-    -webkit-transition: all 300 linear;
-    transition: all 300 linear;
+    -webkit-transition: all 30ms linear;
+    transition: all 300ms linear;
 }
 
 .team-member-info {
     width: 100%;
     height: 100%;
-    padding: 80px 0;
+    padding: 30% 0;
 }
 
 .team-member-info h6 {
@@ -665,7 +671,7 @@ ul.social-list li:nth-child(3) a:hover {
 
 .service-tab p {
     line-height: 24px;
-    margin-bottom: 30;
+    margin-bottom: 30px;
 
 }
 
@@ -745,7 +751,7 @@ ul.social-list li:nth-child(3) a:hover {
     right: 0;
     background: rgba(14, 14, 17, .9);
     cursor: -webkit-zoom-in;
-    cursor: zoom-in;
+    cursor: pointer;
     opacity: 0;
     -webkit-transition: all 0.5s ease;
     transition: all 0.5s ease;
@@ -941,8 +947,7 @@ ul.social-list li:nth-child(3) a:hover {
 }
 
 .pricing-table ul.package li i {
-    widows: 24px;
-    ;
+    width: 24px;
 }
 
 .pricing-table .btn-yellow {
@@ -1087,7 +1092,7 @@ ul.social-list li:nth-child(3) a:hover {
     padding: 20px;
     -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
-    border-radius: 6px;
+    border-radius: 4px;
 }
 
 .blog-post h4 {
@@ -1214,6 +1219,7 @@ footer {
 footer p {
     color: #ffffff;
     line-height: 20px;
+    margin: 0;
 }
 
 footer p span {
